objects/xDO_MDC_Unified_Link__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Data_Source__c</fullName>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_individual_Id__c</fullName>
        <label>Individual Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unified Link Individual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>xDO_MDC_Data_Source__c</columns>
        <columns>xDO_MDC_individual_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Unified Individuals</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unified Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Link Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>